<resources>
    <string name="app_name">virusSafe Agro</string>
    <string name="fragment_template">Template Page</string>
    <string name="fragment_about">App Info</string>
    <string name="fragment_calculator">Calculator</string>
    <string name="fragment_contact_us">Contact Us</string>
    <string name="fragment_control_strategies">Strategies</string>
    <string name="fragment_disclaimer">Disclaimer</string>
    <string name="fragment_factor">Factors</string>
    <string name="fragment_toolkit">Toolkit</string>
    <string name="fragment_insights">Insights</string>
    <string name="fragment_learn">Learn</string>
    <string name="fragment_more">More</string>
    <string name="fragment_news">News</string>
    <string name="fragment_news_detail">News Content</string>
    <string name="fragment_nutrient">Nutrient type</string>
    <string name="fragment_nutrient_detail">Nutrient Detail</string>
    <string name="fragment_nutrient_detail_new">Nutrient Detail</string>
    <string name="fragment_tweet">Tweets</string>
    <string name="fragment_updates">Future Updates</string>
    <string name="fragment_virus_check">Virus Check</string>
    <string name="fragment_virus_check_result">Detect Result</string>
    <string name="fragment_virus_detail">Virus Detail</string>
    <string name="fragment_virus_detail_new">Virus Detail</string>
    <string name="fragment_virus_info">Virus Type</string>
    <string name="fragment_virus_quiz">Take Quiz</string>
    <string name="fragment_pesticide_store_map">Pesticide Map</string>
    <string name="fragment_timing_of_cause">Season</string>
    <string name="fragment_ec">Factors</string>
    <string name="fragment_tomato_tip">Growing Tips</string>
    <string name="fragment_chemical_control">Chemical</string>
    <string name="fragment_non_chemical_control">Non Chemical</string>
    <string name="button_launch_app_boarding">Enter</string>
    <string name="text_swipe_boarding">&lt;&lt; Swipe &gt;&gt;</string>
    <string name="btn_back_boarding">Back</string>
    <string name="btn_next_boarding">Next</string>
    <string name="fragment_virus_single_choice">Single Choice Questions</string>
    <string name="fragment_virus_multiple_choice">Multiple Choice Questions</string>
    <string name="fragment_t1_app_description_more">App Info</string>
    <string name="fragment_t2_updates_more">Future Updates</string>
    <string name="fragment_t3_contact_more">Disclaimer</string>
    <string name="fragment_t4_disclaimer_more">Contact Us</string>
    <string name="fragment_about_app_info">
        Unfamiliar with the virus name which is infecting your tomato plant? Want to detect the virus at an earlier stage or learn about viruses and nutrient deficiencies in tomato plants? virusSafe Agro helps you to detect the virus along with control strategies which helps you to treat the plants thus minimising the chances of losses and damages.
    </string>
    <string name="fragment_about_app_feature">
        • Instantly detect a virus by which the plant is infected\n• Learn more about viruses and nutrient deficiencies in tomato plants\n• Get suggestions for treating infected plants using the chemical and non-chemical control strategies\n• Tips to grow tomato plants in Victoria\n• Know about the happenings in the agriculture industry\n• Locate pesticide stores in your vicinity\n• Easy-to-use interface with an info guide on what each screen offers\n
    </string>
    <string name="fragment_about_app_future_update">This app will contact a feature to detect virus on tomato fruits and a way to tackle it. Also, revisions will be made based on users feedback.</string>
    <string name="fragment_c2_updates_about">The app will contain a feature to check nutrient deficiency in tomato plants and way to tackle it, and revisions based on user feedback.</string>
    <string name="fragment_c4_contact_about">We are open to feedback about this application.</string>
    <string name="email_title">E-mail: </string>
    <string name="our_email">virusSafeAgro@gmail.com</string>
    <string name="fragment_c3_disclaimer_about">virusSafe Agro does not guarantee the completeness or accuracy of information on this page. virusSafe Agro shall bear no liability or responsibility for any errors, defects, faults or omissions in the information.</string>
    <string name="menu_ic_home">HOME</string>
    <string name="menu_ic_toolkit">TOOLKIT</string>
    <string name="menu_ic_learn">LEARN</string>
    <string name="menu_ic_virus_check">CHECK</string>
    <string name="menu_ic_calculator">CALCULATOR</string>
    <string name="menu_ic_more">MORE</string>
    <string name="menu_ic_search">SEARCH</string>
    <string name="text_description_title_toolkit">Welcome to VirusSafe Agro</string>
    <string name="text_description_content_toolkit">This app aims to provide an easy reference to diagnose virus in tomato plants and a care guide for farmers in Victoria who are new to farming.</string>
    <string name="text_description_read_more_toolkit">Read More &gt;</string>
    <string name="text_water_calculator_title_toolkit">Calculate your water usage</string>
    <string name="text_water_calculator_content_toolkit">Click this calculator to get your estimated spending on water per year.</string>
    <string name="text_water_calculator_toolkit">Calculator</string>
    <string name="text_control_toolkit">CONTROL</string>
    <string name="text_strategies_toolkit">STRATEGIES</string>
    <string name="text_non_chemical_control_toolkit">Non-chemical Control</string>
    <string name="text_environmental_condition_toolkit">Environmental Conditions</string>
    <string name="text_pesticide_toolkit">PESTICIDE</string>
    <string name="text_stores_toolkit">STORES</string>
    <string name="text_insights_toolkit">INSIGHTS</string>
    <string name="text_factors_1_toolkit">FACTORS FOR</string>
    <string name="text_factors_2_toolkit">VIRUS SPREAD</string>
    <string name="text_news_toolkit">News</string>
    <string name="text_tweets_toolkit">Tweets</string>
    <string name="text_virus_check_toolkit">Virus Detect</string>
    <string name="text_tomato_detect_toolkit">Quality Detect</string>
    <string name="text_virus_info_toolkit">Learn</string>
    <string name="text_title_chemical_control">CHEMICAL CONTROL</string>
    <string name="text_content_chemical_control">Tap on the tile to know about the chemical sprays that can be used to control the virus spread.</string>
    <string name="text_title_non_chemical_control">NON-CHEMICAL CONTROL</string>
    <string name="text_content_non_chemical_control">Tap on the tile to know about the organic ways to control the virus spread.</string>
    <string name="text_title_cause_factors">SEASON</string>
    <string name="text_content_cause_factors">Tap on the tile to read about the causes that gives rise to the spread of virus.</string>
    <string name="text_title_environmental_conditions_factors">ENVIRONMENTAL CONDITIONS</string>
    <string name="text_content_environmental_conditions_factors">Tap on the tile to know about the environmental conditions that fuel up the virus spread.</string>
    <string name="text_title_news_insights">NEWS</string>
    <string name="text_content_news_insights">Tap on the tile to know read about the happenings in the agricultural industry.</string>
    <string name="text_title_tweets_insights">TWEETS</string>
    <string name="text_content_tweets_insights">Tap on the tile to know read about the tweets posted by people on twitter.</string>
    <string name="text_title_videos_insights">VIDEOS</string>
    <string name="text_content_videos_insights">Tap on the tile to watch videos related to agriculture.</string>
    <string name="text_sub_title_for_virus_learn">Virus Knowledge</string>
    <string name="text_sub_title_for_others_learn">Other Knowledge</string>
    <string name="text_sub_title_for_main_functions_toolkit">Main Functions</string>
    <string name="text_sub_title_for_other_functions_toolkit">Other Functions</string>
    <string name="text_title_virus_learn">VIRUS TYPE</string>
    <string name="text_content_virus_learn">There are 9 types of viruses in tomato plants. Tap on the tile to learn more about them.</string>
    <string name="text_title_nutrient_learn">NUTRIENT DEFICIENCIES</string>
    <string name="text_content_nutrient_learn">There are 11 types of nutrient deficiencies in tomato plants. Tap on the tile to read about the nutrient deficiencies in tomato plants.</string>
    <string name="text_title_tomato_growth_tip_learn">TOMATO GROWING TIPS</string>
    <string name="text_content_tomato_growth_tip_learn">Know about the favorable conditions, fertilizers and much more about growing the tomato plants. Tap on the tile to read about the tips to grow tomato plants.</string>
    <string name="text_site_dot_tweet">\@stockandland&#160;•&#160;</string>
    <string name="text_description_title_virus_info">Virus disease in tomato plants</string>
    <string name="text_description_content_virus_info">There are nine types of viruses in tomato plants, which causes major damages to the yield.  Tap on the tiles below to learn more about the viruses.</string>
    <string name="recycler_view_quiz_button">Take Quiz</string>
    <string name="recycler_view_content_button">View Content</string>
    <string name="button_submit_quiz">Submit Your Answer</string>
    <string name="button_review_quiz">Review Virus Knowledge</string>
    <string name="button_retake_quiz">Retake Quiz</string>
    <string name="button_back">Back</string>
    <string name="button_virus_details_check_result">View Prevention Strategies</string>
    <string name="process_bar_text_virus_info">Loading Virus List &#8230;</string>
    <string name="process_bar_text_virus_quiz">Loading Quiz List and Images &#8230;</string>
    <string name="process_bar_text_nutrient">Loading Nutrient List &#8230;</string>
    <string name="process_bar_text_virus_quiz_question">Loading Quiz Images </string>
    <string name="process_bar_text_news">Loading News List &#8230;</string>
    <string name="process_bar_text_tweet">Loading Tweets List &#8230;</string>
    <string name="network_error_text">Network Error</string>
    <string name="process_bar_text_virus_quiz_result">Loading Quiz Results &#8230;</string>
    <string name="process_bar_text_virus_check">Analysing the Image &#8230;</string>
    <string name="text_healthy_virus_check_result">Your tomato is healthy!</string>
    <string name="text_error_title_virus_check_result">[ Error Message ]:</string>
    <string name="text_error_virus_check_result">Something wrong with the server! Please try again!</string>
    <string name="text_ill_virus_check_result">Your tomato is infected by :</string>
    <string name="dot_with_space">&#160;•&#160;</string>
    <string name="text_location_permission_title">Location Permission</string>
    <string name="text_location_permission_content">Dear user, the location service should be open if you want to try our map for showing your nearest pesticide stores location.</string>
    <string name="btn_location_permission_button">OK</string>
    <string name="btn_show_envelope">get quiz questions</string>
    <string name="btn_beginner">beginner</string>
    <string name="btn_intermediate">intermediate</string>
    <string name="btn_start_quiz">start!</string>
    <string name="btn_open_quiz">open quiz paper</string>
    <string name="text_simple_tip">5 Simple Questions</string>
    <string name="text_tricky_tip">5 Tricky Questions</string>
    <string name="text_single_choice_quiz">single choice question</string>
    <string name="nutrient_transition_name">nutrient</string>
    <string name="virus_detail_new_transition_name">virus_detail_new</string>
    <string name="virus_detail_new_image_transition_name">virus_detail_new_image</string>
    <string name="virus_detail_new_text_transition_name">virus_detail_new_text</string>
</resources>