<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:transitionName="@string/virus_detail_new_transition_name"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mosaic Virus"
        android:textColor="@color/colorWhite"
        android:textSize="25sp"
        android:textStyle="bold"
        android:transitionName="@string/virus_detail_new_text_transition_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/img_picture_virus_detail_new" />

    <ImageView
        android:id="@+id/img_picture_virus_detail_new"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/one"
        android:elevation="5dp"
        android:transitionName="@string/virus_detail_new_image_transition_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>