<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    tools:context=".fragments.ContactUsFragment">

    <LinearLayout
        android:id="@+id/ll_all_view_contact_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_more_fragment_bg_main"
        android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textSize="15sp"
                    android:textColor="@color/colorWhite"
                    android:text="@string/fragment_c4_contact_about"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:textSize="15sp"
                        android:textColor="@color/colorWhite"
                        android:text="@string/email_title"/>

                    <TextView
                        android:id="@+id/tv_our_email_contact_us"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:gravity="start"
                        android:textSize="15sp"
                        android:textColor="@color/colorPrimaryLight"
                        android:textStyle="bold"
                        android:text="@string/our_email"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</RelativeLayout>