<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDarkBG"
    tools:context=".fragments.InsightsFragment">

    <RelativeLayout
        android:id="@+id/rl_all_views_insights"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp">

        <!-- news -->
        <RelativeLayout
            android:id="@+id/rl_news_insights"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:background="@drawable/selector_tile_home">

            <TextView
                android:id="@+id/tv_title_news_insights"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:textSize="22sp"
                android:text="@string/text_title_news_insights"/>

            <RelativeLayout
                android:id="@+id/iv_news_insights"
                android:layout_below="@+id/tv_title_news_insights"
                android:layout_marginTop="10dp"
                android:layout_width="75dp"
                android:layout_height="75dp">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/news"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_content_chemical_control"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_title_news_insights"
                android:layout_toRightOf="@+id/iv_news_insights"
                android:layout_toEndOf="@+id/iv_news_insights"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:textColor="@color/colorWhite"
                android:textSize="13sp"
                android:text="@string/text_content_news_insights" />

        </RelativeLayout>

        <!-- tweets -->
        <RelativeLayout
            android:id="@+id/rl_tweets_insights"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@+id/rl_news_insights"
            android:layout_marginTop="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:background="@drawable/selector_tile_home">

            <TextView
                android:id="@+id/tv_title_tweets_insights"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:textSize="22sp"
                android:text="@string/text_title_tweets_insights"/>

            <RelativeLayout
                android:id="@+id/iv_tweets_insights"
                android:layout_below="@+id/tv_title_tweets_insights"
                android:layout_marginTop="10dp"
                android:layout_width="75dp"
                android:layout_height="75dp">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/twitter"/>

            </RelativeLayout>


            <TextView
                android:id="@+id/tv_content_tweets_insights"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_title_tweets_insights"
                android:layout_toRightOf="@+id/iv_tweets_insights"
                android:layout_toEndOf="@+id/iv_tweets_insights"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:textColor="@color/colorWhite"
                android:textSize="13sp"
                android:text="@string/text_content_tweets_insights" />

        </RelativeLayout>

        <!-- videos -->
        <RelativeLayout
            android:id="@+id/rl_videos_insights"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@+id/rl_tweets_insights"
            android:layout_marginTop="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:background="@drawable/selector_tile_home">

            <TextView
                android:id="@+id/tv_title_videos_insights"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:textSize="22sp"
                android:text="@string/text_title_videos_insights"/>

            <RelativeLayout
                android:id="@+id/iv_videos_insights"
                android:layout_below="@+id/tv_title_videos_insights"
                android:layout_marginTop="10dp"
                android:layout_width="75dp"
                android:layout_height="75dp">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/videos"/>

            </RelativeLayout>


            <TextView
                android:id="@+id/tv_content_videos_insights"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_title_videos_insights"
                android:layout_toRightOf="@+id/iv_videos_insights"
                android:layout_toEndOf="@+id/iv_videos_insights"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:textColor="@color/colorWhite"
                android:textSize="13sp"
                android:text="@string/text_content_videos_insights" />

        </RelativeLayout>

    </RelativeLayout>


</RelativeLayout>
