<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDarkBG"
    tools:context=".fragments.NutrientFragment">

    <!-- nutrient list -->
    <LinearLayout
        android:id="@+id/ll_list_nutrient_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:transitionName="@string/nutrient_transition_name"
        android:padding="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
    
            <GridView
                android:id="@+id/gv_list_nutrient_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:horizontalSpacing="5dp"
                android:verticalSpacing="10dp"
                android:padding="10dp"
                android:numColumns="3" />
            
        </LinearLayout>

    </LinearLayout>

    <!-- network error -->
    <RelativeLayout
        android:id="@+id/rl_fail_network_nutrient"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone">

        <ImageView
            android:src="@drawable/network_error"
            android:layout_above="@id/tv_network_error_nutrient"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_network_error_nutrient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/colorWhite"
            android:text="@string/network_error_text" />

        <Button
            android:id="@+id/btn_reconnect_nutrient"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/tv_network_error_nutrient"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_btn_reconnect_virus_info"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="Retry" />

    </RelativeLayout>

    <!-- progress bar-->
    <LinearLayout
        android:id="@+id/ll_process_bar_nutrient"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <ProgressBar
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/colorWhite"
            android:text="@string/process_bar_text_nutrient" />

    </LinearLayout>


</RelativeLayout>