<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDarkBG"
    tools:context=".fragments.FactorsFragment">

    <RelativeLayout
        android:id="@+id/rl_all_views_factors"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp">

        <!-- timing of cause -->
        <RelativeLayout
            android:id="@+id/rl_cause_factors"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:background="@drawable/ripple_tile_rectangle">

            <TextView
                android:id="@+id/tv_title_cause_factors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:textSize="22sp"
                android:text="@string/text_title_cause_factors"/>

            <RelativeLayout
                android:id="@+id/iv_cause_factors"
                android:layout_below="@+id/tv_title_cause_factors"
                android:layout_marginTop="10dp"
                android:layout_width="75dp"
                android:layout_height="75dp">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/hand"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_content_cause_factors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_title_cause_factors"
                android:layout_toRightOf="@+id/iv_cause_factors"
                android:layout_toEndOf="@+id/iv_cause_factors"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:textColor="@color/colorWhite"
                android:textSize="13sp"
                android:text="@string/text_content_cause_factors" />

        </RelativeLayout>

        <!-- non-cause factors -->
        <RelativeLayout
            android:id="@+id/rl_environmental_conditions_factors"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@+id/rl_cause_factors"
            android:layout_marginTop="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:background="@drawable/ripple_tile_rectangle">

            <TextView
                android:id="@+id/tv_title_environmental_conditions_factors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:textSize="22sp"
                android:text="@string/text_title_environmental_conditions_factors"/>

            <RelativeLayout
                android:id="@+id/iv_environmental_conditions_factors"
                android:layout_below="@+id/tv_title_environmental_conditions_factors"
                android:layout_marginTop="10dp"
                android:layout_width="75dp"
                android:layout_height="75dp">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/weather"/>

            </RelativeLayout>


            <TextView
                android:id="@+id/tv_content_environmental_conditions_factors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_title_environmental_conditions_factors"
                android:layout_toRightOf="@+id/iv_environmental_conditions_factors"
                android:layout_toEndOf="@+id/iv_environmental_conditions_factors"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:textColor="@color/colorWhite"
                android:textSize="13sp"
                android:text="@string/text_content_environmental_conditions_factors" />

        </RelativeLayout>

    </RelativeLayout>


</androidx.core.widget.NestedScrollView>